--- a/blog/templates/blog/table.html
+++ b/blog/templates/blog/table.html
@@ -1,8 +1,10 @@
+
 {% extends "blog/base.html" %} 
 {% block content %}
-<table>
+<table id="table1" cellspacing="0" class="mytable">
     {{loaded_data | safe}}  
 </table>
 
   
+
 {% endblock content %}
