made changes to model

--- a/blog/templates/blog/data.html
+++ b/blog/templates/blog/data.html
@@ -19,6 +19,10 @@
             </tr>
             {% endfor %}    
         </table>
+
+    {% else %} 
+        <p>No records found</p>
+    {% endif %}
 </div>
 
 {% endblock content %}
